sources = [
    'main.c',
    'gui.c',
    'gui-dialogs.c',
    'gui-menubar.c',
    'gui-documents.c',
    'gui-news.c',
    'newsrc.c',
    'gui-extras.c',
    'mo-www.c',
    'mo-dtm.c',
    'hotlist.c',
    'history.c',
    'annotate.c',
    'pan.c',
    'grpan.c',
    'grpan-www.c',
    'audan.c',
    'globalhist.c',
    'img.c',
    'picread.c',
    'xpmhash.c',
    'xpmread.c',
    'gifread.c',
    'pixmaps.c',
    'medcut.c',
    'mo-hdf.c',
    'hotfile.c',
    'child.c',
    'mailto.c',
    'readJPEG.c',
    'readPNG.c',
    'accept.c',
    'cciServer.c',
    'cciBindings.c',
    'cciBindings2.c',
    'support.c',
    'bla.c',
    'kcms.c',
    'md5.c',
    'proxy-dialogs.c',
    'proxy-misc.c',
    'gui-popup.c',
    'gui-ftp.c',
    'prefs.c',
    'hdf-browse.c'
]

exe = executable('Mosaic', sources, dependencies: [
    www2,
    Xmx,
    htmlw,
    nut,
    openmotif
])
